--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -89,10 +90,8 @@
             ],
             "styles": [
               "src/styles.css"
-              
             ],
-            "scripts": [
-          ]
+            "scripts": []
           }
         }
       }
